--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -25,10 +25,10 @@ body {
 // Effects
 // ==========================================================
 
-.atk-background-cover {
+.background-cover {
   .background-cover(inherit);
 }
-.atk-background-fixed {
+.background-fixed {
   .background-fixed;
 }
 
@@ -70,7 +70,7 @@ a {
 // Common
 // ==========================================================
 
-.atk-overflow {
+.overflow {
   overflow: hidden;
 }
 
@@ -83,7 +83,7 @@ a {
     .clear-fix;
 }
 .labelSupport() {
-  .atk-label {
+  .label {
       display: inline-block;
       height: 1em * @bodyBaseline;
       margin: 0 .2em;
