--- a/framework/less/mixins.less
+++ b/framework/less/mixins.less
@@ -3,7 +3,7 @@
 // ========================================================
 //   All global mixin functions go here.
 // 
-//   You can use variables from atk-variables.less here,
+//   You can use variables from variables.less here,
 // but try to avoid using variables from jui-variables.less
 // (custom JUI theme) directly.
 // ========================================================
