--- a/framework/less/agiletoolkit.less
+++ b/framework/less/agiletoolkit.less
@@ -14,6 +14,7 @@
 @import 'normalize.less'; /* Renders elements more consistently and in line with modern standards. */
 @import 'mixins.less';
 @import 'layouts.less';
+@import 'swatches.less';
 @import 'typography.less';
 @import 'forms.less';
 @import 'misc.less';
