--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -1,35 +1,35 @@
 // ==========================================================
 // Layouts (credit: Pixel vs. Bytes)
 // ==========================================================
-html, body, .atk-layout  {
+html, body, .layout  {
 	height: 100%;
 }
-.atk-layout {
+.layout {
 	.box-sizing;
 	display: table;
 	width: 100%;
-	>.atk-layout-row, >.atk-layout-column, .atk-layout-row>.atk-layout-column {
+	>.layout-row, >.layout-column, .layout-row>.layout-column {
 		height: 0.1%;
 		position: relative;
 	}
-	>.atk-layout-row {
+	>.layout-row {
 		display: table-row;
 		height: 0.01em;
-		&.atk-layout-fluid, &.atk-layout-expand {
+		&[class*='-expand'] {
 			height: auto;
 		}
 	}
-	>.atk-layout-column, >.atk-layout-row>.atk-layout-column {
+	>.layout-column, >.layout-row>.layout-column {
 		display: table-cell;
 		height: auto;
 		vertical-align: top;
 		width: 0.01em;
-		&.atk-layout-fluid, &.atk-layout-expand {
+		&[class*='-expand'] {
 			width: auto;
 		}
 	}
 }
-.atk-wrapper {
+.wrapper {
     margin-left: auto;
     margin-right: auto;
 }
