--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -34,21 +34,21 @@
 @textSelect:           #1c2933; // Text selection's color
 @textDimmed:           lighten(@bodyColor, 40%);
 
-@blur:                 5px; // Effect .atk-blur can be applied on any element.
+@blur:                 5px; // Effect .blur can be applied on any element.
 
 @borderDisabled:       lighten(@borderStatic, 10%);
 @borderStatic:         #dcdee0;
 @borderClickable:      darken(@borderStatic, 10%);
 @borderOverlay:        darken(@borderStatic, 25%);
 
-// @atk-swatch-white:	   #ffffff;		.createSwatch(atk-swatch-white);
-// @atk-swatch-black:     #000000;		.createSwatch(atk-swatch-black);
-// @atk-swatch-gray:	   #f5f6f7;		.createSwatch(atk-swatch-gray);
-// @atk-swatch-ink:       #1c2933;		.createSwatch(atk-swatch-ink);
-// @atk-swatch-yellow:	   #ffcc00;		.createSwatch(atk-swatch-yellow);
-// @atk-swatch-red:	   #f9451f;		.createSwatch(atk-swatch-red);
-// @atk-swatch-green:     #00cc66;		.createSwatch(atk-swatch-green);
-// @atk-swatch-blue:      #0095ff;		.createSwatch(atk-swatch-blue);
+// @swatch-white:	   #ffffff;		.createSwatch(swatch-white);
+// @swatch-black:     #000000;		.createSwatch(swatch-black);
+// @swatch-gray:	   #f5f6f7;		.createSwatch(swatch-gray);
+// @swatch-ink:       #1c2933;		.createSwatch(swatch-ink);
+// @swatch-yellow:	   #ffcc00;		.createSwatch(swatch-yellow);
+// @swatch-red:	   #f9451f;		.createSwatch(swatch-red);
+// @swatch-green:     #00cc66;		.createSwatch(swatch-green);
+// @swatch-blue:      #0095ff;		.createSwatch(swatch-blue);
 
 @swatchText:           50%; // Text color sensitivity based on swatch
 
